# gads-etl

./: .gitignore  README.md  agents.md  architecture.md  ci.md  decisions.md  pyproject.toml  spec.md  test.md
app/python-etl/gads_etl/: cli.py  env.py  google_ads_client.py  pipeline.py
config/: google_apis.yaml
database/: README.md
database/schema/: warehouse_tables.sql
docs/: architecture.md  canonical_workflow.md  consumer_contract.md  control_plane.md  parallel_safety.md  progress.md  raw_sink_contract.md  raw_sink_interface.md  repo_integrity_failures.md  retry_daemon.md  retry_orchestration.md  stage_11_completion.md  stage_completion_definition.md  state_store_contract.md  storage_realism.md  warehouse_semantics.md
docs/diagrams/: control_vs_data_plane.d2  stage12_options.d2  system_overview.d2  timeline_single_partition.d2
infra/ansible/: README.md
infra/ansible/group_vars/: all.yaml
infra/ansible/inventories/dev/: hosts.ini
infra/ansible/playbooks/: bootstrap.yaml
infra/ansible/roles/common/tasks/: main.yaml
scripts/: dev_check.sh  generate_refresh_token.py  generate_token.py  verify_repo_integrity.py
src/gads_etl/: __init__.py  cli.py  config.py  consumer_preview.py  pipeline.py  raw_sink.py  raw_sink_factory.py  raw_sink_local.py  raw_sink_object.py  run_context.py  state_inspect.py  state_store.py  validator.py
src/gads_etl/warehouse/: __init__.py  curated_sink.py  loader.py  pointer_store.py
tests/: conftest.py
tests/integration/: test_google_ads_api.py  test_raw_sink_object_minio.py
tests/unit/: test_config_loader.py  test_imports.py  test_raw_sink_object.py
tests/unit/warehouse/: test_loader.py
